# soak-station

./: README.md  __init__.py  binary_sensor.py  config_flow.py  manifest.json  pyproject.toml  requirements.txt  sensor.py  switch.py
.github/workflows/: release.yml
custom_components/soakstation/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py  switch.py
custom_components/soakstation/mira/helpers/: connection.py  generic.py
custom_components/soakstation/mira/sensors/: outlet_binary_sensor.py  temp_sensor.py  timer_remaining_sensor.py  timer_state_sensor.py
mira/: config_helper.py  pairing.py
mira/helpers/: connection.py  const.py  data_model.py  generic.py  notifications.py
mira/sensors/: connection_binary_sensor.py  outlet_binary_sensor.py  temp_sensor.py  timer_remaining_sensor.py  timer_state_sensor.py
mira/switch/: outlet_switch.py
miramode/: __init__.py  cli.py  const.py  mira_utils.py  notifications.py  pairing.py
sensors/: binary_sensor.py  sensor.py
tests/: test_generic.py
translations/: en.json
