[project]
name = "soakstation"
version = "0.1.0"
description = "Home Assistant integration for Mira SoakStation smart showers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = [
    "custom_components.soakstation"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "homeassistant",
    "commitizen",
    "black",
    "isort",
    "mypy",
     "tomlkit>=0.12.0"
]
